--- a/public/project/giraffes/index.html
+++ b/public/project/giraffes/index.html
@@ -283,6 +283,9 @@ same color options, but this time you get to assign your own HEX codes.</p>
         <div class="post-pagination dt w-100 mt4 mb2">
   
   
+    <a class="prev dtc pr2 tl v-top fw6"
+    href="https://achalmaedison.netlify.app/project/definicion-de-ciencia-de-datos/">&larr; Definicion de ciencia de datos</a>
+  
   
   
     <a class="next dtc pl2 tr v-top fw6"
